--- a/AI.API/AI.API.csproj
+++ b/AI.API/AI.API.csproj
@@ -10,6 +10,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4"/>
         <PackageReference Include="Scalar.AspNetCore" Version="2.2.1" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Expressions" Version="5.1.0-dev-02301" />
         <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="8.1.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
     </ItemGroup>
