--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,12 +2,12 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: ["main", "master"]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: ["main", "master"]
+    branches: [ "main", "master" ]
 
 env:
-  DOCKER_HUB_USERNAME: nguyenhuyphc@gmail.com
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
   # VPS_HOST: ${{ secrets.VPS_HOST }}
   # VPS_USERNAME: ${{ secrets.VPS_USERNAME }}
   # VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
@@ -25,48 +25,53 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: nguyenhuyphc@gmail.com
-          password: Phuc0847911068
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
+      # Build and push AI.API
       - name: Build and push AI.API
         uses: docker/build-push-action@v4
         with:
           context: .
           file: AI.API/Dockerfile
           push: true
-          tags: nguyenhuyphc@gmail.com/docai-ai-api:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-ai-api:latest
 
+      # Build and push Auth.API
       - name: Build and push Auth.API
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Auth.API/Dockerfile
           push: true
-          tags: nguyenhuyphc@gmail.com/docai-auth-api:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-auth-api:latest
 
+      # Build and push Document.API
       - name: Build and push Document.API
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Document.API/Dockerfile
           push: true
-          tags: nguyenhuyphc@gmail.com/docai-document-api:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-document-api:latest
 
+      # Build and push Notification.API
       - name: Build and push Notification.API
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Notification.API/Dockerfile
           push: true
-          tags: nguyenhuyphc@gmail.com/docai-notification-api:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-notification-api:latest
 
+      # Build and push API Gateway
       - name: Build and push API Gateway
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ApiGateway/Dockerfile
           push: true
-          tags: nguyenhuyphc@gmail.com/docai-gateway:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-gateway:latest
 
   # deploy:
   #   needs: build-and-push
@@ -81,7 +86,7 @@ jobs:
   #         host: ${{ secrets.VPS_HOST }}
   #         username: ${{ secrets.VPS_USERNAME }}
   #         key: ${{ secrets.VPS_SSH_KEY }}
-  #         source: "compose.yml"
+  #         source: "compose.yaml"
   #         target: "~/docai"
 
   #     - name: Deploy to VPS
@@ -92,10 +97,7 @@ jobs:
   #         key: ${{ secrets.VPS_SSH_KEY }}
   #         script: |
   #           cd ~/docai
-  #           export DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}
-  #           export TAG=${{ github.sha }}
-  #           docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" -p "${{ secrets.DOCKER_HUB_TOKEN }}"
-  #           docker-compose -f compose.yml pull
-  #           docker-compose -f compose.yml up -d
-  #           docker-compose -f compose.yml ps
+  #           echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+  #           docker-compose pull
+  #           docker-compose up -d
   #           docker system prune -f
