--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main", "master" ]
 
 env:
-  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  DOCKER_HUB_USERNAME: nguyenhuyphc@gmail.com
   # VPS_HOST: ${{ secrets.VPS_HOST }}
   # VPS_USERNAME: ${{ secrets.VPS_USERNAME }}
   # VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
@@ -25,8 +25,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          username: nguyenhuyphc@gmail.com
+          password: Phuc0847911068
 
       # Build and push AI.API
       - name: Build and push AI.API
@@ -35,7 +35,7 @@ jobs:
           context: .
           file: AI.API/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-ai-api:latest
+          tags: nguyenhuyphc@gmail.com/docai-ai-api:latest
 
       # Build and push Auth.API
       - name: Build and push Auth.API
@@ -44,7 +44,7 @@ jobs:
           context: .
           file: Auth.API/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-auth-api:latest
+          tags: nguyenhuyphc@gmail.com/docai-auth-api:latest
 
       # Build and push Document.API
       - name: Build and push Document.API
@@ -53,7 +53,7 @@ jobs:
           context: .
           file: Document.API/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-document-api:latest
+          tags: nguyenhuyphc@gmail.com/docai-document-api:latest
 
       # Build and push Notification.API
       - name: Build and push Notification.API
@@ -62,7 +62,7 @@ jobs:
           context: .
           file: Notification.API/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-notification-api:latest
+          tags: nguyenhuyphc@gmail.com/docai-notification-api:latest
 
       # Build and push API Gateway
       - name: Build and push API Gateway
@@ -71,7 +71,7 @@ jobs:
           context: .
           file: ApiGateway/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/docai-gateway:latest
+          tags: nguyenhuyphc@gmail.com/docai-gateway:latest
 
   # deploy:
   #   needs: build-and-push
