--- a/compose.yaml
+++ b/compose.yaml
@@ -1,41 +1,26 @@
 ﻿services:
   ai.api:
-    image: ai.api
-    build:
-      context: .
-      dockerfile: AI.API/Dockerfile
+    image: nguyenhuyphc@gmail.com/docai-ai-api:latest
     ports:
       - "5003:5003"
 
   auth.api:
-    image: auth.api
-    build:
-      context: .
-      dockerfile: Auth.API/Dockerfile
+    image: nguyenhuyphc@gmail.com/docai-auth-api:latest
     ports:
       - "5001:5001"
 
   apigateway:
-    image: apigateway
-    build:
-      context: .
-      dockerfile: ApiGateway/Dockerfile
+    image: nguyenhuyphc@gmail.com/docai-gateway:latest
     ports:
       - "5000:5000"
 
   document.api:
-    image: document.api
-    build:
-      context: .
-      dockerfile: Document.API/Dockerfile
+    image: nguyenhuyphc@gmail.com/docai-document-api:latest
     ports:
       - "5002:5002"
 
   notification.api:
-    image: notification.api
-    build:
-      context: .
-      dockerfile: Notification.API/Dockerfile
+    image: nguyenhuyphc@gmail.com/docai-notification-api:latest
     ports:
       - "5004:5004"
 
